add_custom_command(
  OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/generated/Ribbon.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/generated/Ribbon.rc 
    ${CMAKE_CURRENT_SOURCE_DIR}/generated/Ribbon.bml 
  COMMAND uicc ${CMAKE_CURRENT_SOURCE_DIR}/Ribbon.xml
    ${CMAKE_CURRENT_SOURCE_DIR}/generated/Ribbon.bml
    /header:${CMAKE_CURRENT_SOURCE_DIR}/generated/Ribbon.h
    /res:${CMAKE_CURRENT_SOURCE_DIR}/generated/Ribbon.rc 
  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/Ribbon.xml
)

add_executable(npsystem WIN32
  assignedalgorithm.h
  assigned.cpp
  avrassigned.cpp
  avrassigned.h
  avrcommand.cpp
  avrcommand.h
  avrconfigurator.cpp
  avrconfigurator.h
  avrcontroller.cpp
  blockcomposition.cpp
  blockcomposition.hpp
  block.cpp
  blockdecl.h
  block_factory.hpp
  block.h
  blockpropertyid.h
  boost_export.cpp
  codegenerator_avr.cpp
  codegenerator_avr.h
  codegenerator.h
  color.h
  comassert.h
  command.cpp
  command_i.hpp
  command_impl.h
  config.h
  configurator.cpp
  configurator.h
  constants.h
  control_unit_ext.h
  controlwindow.h
  cpp_deleter.h
  customitem.h
  device.cpp
  dlgabout.h
  dlgalgorithmproperties.h
  dlgavrmemoryviewer.h
  dlgbase.h
  dlgblockfunctionequation.h
  dlgblockparam.h
  dlgconfigurableblock.h
  dlgdoclist.h
  dlgloadingmanager.cpp
  dlgloadingmanager.h
  dlgmodule.h
  dlgnewcontroller.h
  dlgonlinediscrete.h
  dlgonlinevalue.h
  dlgparameter.h
  dlgpinconfig.h
  dlgsegment.h
  dlgsegmentvalue.h
  dlgsimpleinput.h
  dlgstring.h
  dockable.h
  dockable_index.h
  dynamiclinker.h
  element.h
  error.cpp
  error.h
  exception.h
  fbd_block_composition.hpp
  fbd_block_factory.hpp
  fbd_control_unit.cpp
  gccwrapperavr.cpp
  gccwrapperavr.h
  gdiglobal.cpp
  gdiglobal.h
  genhelper.h
  global.cpp
  global.h
  graphics.cpp
  graphics.h
  hash.cpp
  hash.h
  io_avr.cpp
  io_avr.h
  iter.h
  libfunction.h
  library.cpp
  library.h
  line_connectable.hpp
  line.cpp
  line.h
  listcontrolview.cpp
  listcontrolview.h
  mainfrm.h
  manipulator.h
  math2d.h
  memorymanager.cpp
  memorymanager.h
  messages.h
  module.cpp
  module.h
  mybutton.h
  myedit.h
  myonlinetreectrl.cpp
  myonlinetreectrl.h
  mystatusbar.h
  mytabview.cpp
  mytabview.h
  mytreeview.cpp
  mytreeview.h
  network_ext.h
  npsys.cpp
  npsystem.cpp
  npsystem.exe.manifest
  npsystem.rc
  npsystem.ruleset
  onlinetreeitem.h
  outputwnd.cpp
  outputwnd.h
  propertygridcombo.cpp
  propertygridcombo.h
  propertygrid.cpp
  #propertygriddirectorypicker.cpp
  #propertygriddirectorypicker.h
  propertygrid.h
  propertygridinplaceedit.cpp
  propertygridinplaceedit.h
  #propertygridmonthcalctrl.cpp
  #propertygridmonthcalctrl.h
  quadrant.h
  resource.h
  Ribbon.xml
  generated/Ribbon.h
  generated/Ribbon.bml
  ribbonstate.h
  ScintillaView.cpp
  ScintillaView.h
  scintillawindow.cpp
  scintillawindow.h
  serialization_atl_rect.h
  serialization_atl_string.h
  serialization_d2d.h
  sfc_block_composition.hpp
  sfc_block.cpp
  sfc_block_factory.hpp
  sfc_block.hpp
  sfc_block_visitor.cpp
  sfc_block_visitor.hpp
  sfc_control_unit.cpp
  slot.cpp
  stdafx.cpp
  stdafx.h
  stuff.cpp
  stuff.h
  tabcontainer.cpp
  tabcontainer.h
  targetver.h
  tr_alg.h
  tr_all.cpp
  tr_block.cpp
  tr_block.h
  tr_controller.h
  tr_controllers.cpp
  tr_hardware.h
  tr_item.cpp
  tr_item.h
  tr_module.h
  tr_network.h
  tr_request.h
  tr_system.h
  typedeterminant.cpp
  variable.cpp
  variableloader.cpp
  variableloader.h
  vartype.cpp
  vartype.h
  view_algorithm.cpp
  view_algorithm.h
  view_controller.cpp
  view_controller.h
  view.cpp
  view.h
  visitorbase.h
  visitorblocks.cpp
  visitorblocks.h
  wm_user.h
)

add_definitions(
  -DNPSYSTEM_FIRMWARE_API_CPP
  -D_NPSYSTEM_
  -D_UNICODE
)

target_include_directories(npsystem PRIVATE
  ../avr_info/include
  ../npc/include
  ../nplib/include
  ../npdbclient/include
  ../npsys/include
  ../nprpc/include
  ../avr_firmware/include
)

target_link_libraries(npsystem PRIVATE
  nprpcst
	npdbstatic
	npdbclient
	nplib
	npsys
	nprpc
	npc
  avr_info
)

